keine scrollbars im videoblock; fixes #77

--- a/blocks/VideoBlock/css/video_block.scss
+++ b/blocks/VideoBlock/css/video_block.scss
@@ -6,5 +6,6 @@ section.VideoBlock {
         width: 560px;
         height: 315px;
         border: none;
+        overflow: hidden;
     }
 }
